bug 861112 - (widget/gtk2) scaling from display to device pixels should only apply to top-level windows/dialogs/popups, not to child or plugin windows. r=roc a=bajaj

--HG--
extra : transplant_source : %A3%C5%5B%DB%E3%7D%E8%80Z%88Z%3De%20%5EqY%0A%ABU