widget/gtk2/nsWindow.cpp
@@ -994,7 +994,8 @@ nsWindow::Show(bool aState)
 NS_IMETHODIMP
 nsWindow::Resize(double aWidth, double aHeight, bool aRepaint)
 {
-    double scale = GetDefaultScale();
+    double scale =
+        mWindowType <= eWindowType_popup ? GetDefaultScale() : 1.0;
     int32_t width = NSToIntRound(scale * aWidth);
     int32_t height = NSToIntRound(scale * aHeight);
     ConstrainSize(&width, &height);
@@ -1074,7 +1075,8 @@ NS_IMETHODIMP
 nsWindow::Resize(double aX, double aY, double aWidth, double aHeight,
                  bool aRepaint)
 {
-    double scale = GetDefaultScale();
+    double scale =
+        mWindowType <= eWindowType_popup ? GetDefaultScale() : 1.0;
     int32_t width = NSToIntRound(scale * aWidth);
     int32_t height = NSToIntRound(scale * aHeight);
     ConstrainSize(&width, &height);
@@ -1162,7 +1164,8 @@ nsWindow::Move(double aX, double aY)
     LOG(("nsWindow::Move [%p] %f %f\n", (void *)this,
          aX, aY));
 
-    double scale = GetDefaultScale();
+    double scale =
+        mWindowType <= eWindowType_popup ? GetDefaultScale() : 1.0;
     int32_t x = NSToIntRound(aX * scale);
     int32_t y = NSToIntRound(aY * scale);
 
